# weather-alert

./: .dockerignore  Cargo.toml  Dockerfile  README.md  dev.md  rustfmt.toml
src/: alert.rs  main.rs  my.rs  utils.rs
